<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="2dp"
    app:cardCornerRadius="10dp"
    android:layout_gravity="center_vertical"
    android:layout_marginHorizontal="5dp"
    android:layout_marginVertical="3dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="15dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/no_kutip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/no_kotak"
            android:textSize="14sp"
            android:textStyle="bold"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/no_seal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/no_kutip"
            android:text="@string/no_seal"
            android:textSize="14sp"
            android:textStyle="bold"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/kategori"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/no_seal"
            android:text="@string/kategori"
            android:textSize="14sp"
            android:textStyle="bold"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/jumlah_butir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/kategori"
            android:text="@string/jumlah_butir"
            android:textSize="14sp"
            android:textStyle="bold"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnHapus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete_red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>