<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".packaging.kotak.detail.KotakDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            app:title="Detail Kotak"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/background"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tv_no_kotak"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="15dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/no_kotak"
        />

    <TextView
        android:id="@+id/tv_customer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_no_kotak"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="15dp"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/customer"
        />

    <TextView
        android:id="@+id/tv_tgl_kirim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_customer"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="15dp"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/tgl_kirim"
        />

    <TextView
        android:id="@+id/tv_jlh_kantong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_tgl_kirim"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="15dp"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/jumlah_kantong"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/extend_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintTop_toBottomOf="@id/tv_jlh_kantong"
        app:layout_constraintBottom_toTopOf="@id/line_view">

        <TextView
            android:id="@+id/tv_lm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".1"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textSize="14sp"
            android:text="@string/lm_str"
            />

        <TextView
            android:id="@+id/tv_ya"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".1"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textSize="14sp"
            android:text="@string/ya_str"
            />

        <TextView
            android:id="@+id/tv_dpmtg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".1"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textSize="14sp"
            android:text="@string/dpmtg"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:id="@+id/line_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@id/tv_detail_list"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        />

    <TextView
        android:id="@+id/tv_detail_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/sr_list"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="15dp"
        android:text="Daftar nomor kutipan"
        />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/sr_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="2dp"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="50dp">

        <androidx.recyclerview.widget.RecyclerView
            android:visibility="gone"
            android:layout_marginTop="60dp"
            android:id="@+id/rv_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="5dp"
            android:scrollbars="none"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:listitem="@layout/item_list_kotak"
            tools:itemCount="4"
            />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_tambah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_add_circle_outline_black_24dp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="15dp"
        app:tint="@null"
        android:contentDescription="@string/tambah" />


    <include android:id="@+id/progressLayout" layout="@layout/progress_layout_dark" />

</androidx.constraintlayout.widget.ConstraintLayout>